StatelessYaml/yaml/serviceStatelessBack.yaml

apiVersion: v1
kind: Service
metadata:
  name: statelessback
spec:
  type: ClusterIP
  selector:
    app: statelessback
  ports:
    - name: statelessback
      protocol: TCP
      port: 8081
