StatelessYaml/yaml/serviceStatelessFront.yaml
apiVersion: v1
kind: Service
metadata:
  name: statelessfront
spec:
  type: ClusterIP
  selector:
    app: statelessfront
  ports:
    - name: statelessfront
      protocol: TCP
      port: 8080
