StatelessYaml/yaml/ingressStatelessBackRules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stockmanager-direct-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts: 
    # ${EXTERNAL_IP} must be replaced with the IP address of the ingress controller
    - statelessback.${EXTERNAL_IP}.nip.io
    secretName: tls-statelessback
  rules:
    # ${EXTERNAL_IP} must be replaced with the IP address of the ingress controller
  - host: statelessback.${EXTERNAL_IP}.nip.io
    http:
      paths:apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: statelessback-direct-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts: 
    # ${EXTERNAL_IP} must be replaced with the IP address of the ingress controller
    - statelessback.${EXTERNAL_IP}.nip.io
    secretName: tls-stateless
  rules:
    # ${EXTERNAL_IP} must be replaced with the IP address of the ingress controller
  - host: statelessback.${EXTERNAL_IP}.nip.io
    http:
      paths:
      - path: /prefix
        pathType: Prefix
        backend:
          service:
            name: statelessback
            port:
              name: statelessback
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: statelessback
            port:
              name: statelessback
      - path: /status
        pathType: Prefix
        backend:
          service:
            name: statelessback
            port:
              name: statelessback
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: statelessback
            port:
              name: statelessback
      - path: /autocrash
        pathType: Prefix
        backend:
          service:
            name: statelessback
            port:
              name: statelessback
      - path: /autohang
        pathType: Prefix
        backend:
          service:
            name: statelessback
            port:
              name: statelessback
      - path: /autoready
        pathType: Prefix
        backend:
          service:
            name: statelessback
            port:
              name: statelessback
      - path: /openapi
        pathType: Exact
        backend:
          service:
            name: statelessback
            port:
              name: statelessback
