StatelessYaml/yaml/ingressStatelessFrontRules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: statelessfront-direct-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts: 
    # ${EXTERNAL_IP} must be replaced with the IP address of the ingress controller
    - statelessfront.${EXTERNAL_IP}.nip.io
    secretName: tls-statelessfront
  rules:
    # ${EXTERNAL_IP} must be replaced with the IP address of the ingress controller
  - host: statelessfront.${EXTERNAL_IP}.nip.io
    http:
      paths:
      - path: /greet
        pathType: Prefix
        backend:
          service:
            name: statelessfront
            port:
              name: statelessfront
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: statelessfront
            port:
              name: statelessfront
      - path: /status
        pathType: Prefix
        backend:
          service:
            name: statelessfront
            port:
              name: statelessfront
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: statelessfront
            port:
              name: statelessfront
      - path: /autocrash
        pathType: Prefix
        backend:
          service:
            name: statelessfront
            port:
              name: statelessfront
      - path: /autohang
        pathType: Prefix
        backend:
          service:
            name: statelessfront
            port:
              name: statelessfront
      - path: /autoready
        pathType: Prefix
        backend:
          service:
            name: statelessfront
            port:
              name: statelessfront
      - path: /openapi
        pathType: Exact
        backend:
          service:
            name: statelessfront
            port:
              name: statelessfront
