StatelessYaml/yaml/ingressZipkinRules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zipkin-direct-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts: 
    # ${EXTERNAL_IP} must be replaced with the IP address of the ingress controller
    - zipkin.${EXTERNAL_IP}.nip.io
    secretName: tls-zipkin
  rules:
    # ${EXTERNAL_IP} must be replaced with the IP address of the ingress controller
  - host: zipkin.${EXTERNAL_IP}.nip.io
    http:
      paths:
      - path: /zipkin
        pathType: Prefix
        backend:
          service:
            name: zipkin
            port:
              name: zipkin
